glx/testdata/invalid/invalid-assertion-properties/relationships/rel-marriage.glx
relationships:
  rel-marriage:
    type: marriage
    participants:
      - person: person-mother
        role: spouse
      - person: person-father
        role: spouse
